<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_half_spacing"
    tools:layout_height="100dp">

    <ImageView
        android:id="@+id/album_artwork_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/album_artwork"
        tools:src="@tools:sample/backgrounds/scenic"/>

    <TextView
        android:id="@+id/album_title_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/album_artwork_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/album_artist_view"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="@dimen/default_spacing"
        android:textStyle="bold"
        tools:text="Album Title"/>

    <TextView
        android:id="@+id/album_artist_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/album_artwork_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_title_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="@dimen/default_spacing"
        tools:text="Album Artist"/>

</android.support.constraint.ConstraintLayout>